ghc-4335c07/testsuite/tests/safeHaskell/safeInfered/UnsafeWarn01.stderr

UnsafeWarn01.hs:2:16: warning: [-Wunsafe]
    ‘UnsafeWarn01’ has been inferred as unsafe!
    Reason:
        UnsafeWarn01.hs:7:1: error:
            System.IO.Unsafe: Can't be safely imported!
            The module itself isn't safe.
